--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -5,7 +5,7 @@
         android:title="Home" />
     <item
         android:id="@+id/nav_calculation"
-        android:title="Activity of Calculation" />
+        android:title="Loan Calculation" />
     <item
         android:id="@+id/nav_about"
         android:title="About" />
